<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Fragments.EventsFragment">

    <!-- ListView to Events -->
    <ListView
        android:id="@+id/event_contents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:dividerHeight="16dp"
        android:divider="@color/colorBackground"/>

    <!-- Add Buttons -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:id="@+id/addButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:cornerRadius="28dp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:text="+"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>