<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/qrCodeImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="QR Code"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/qrCodeBackButton"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="208dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/qrCodeBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/lightSurfaceContainerHigh"
        android:text="Back to Home"
        android:fontFamily="sans-serif-medium"
        app:icon="@drawable/ic_home_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrCodeImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>