...
        android:backgroundTint="@color/lightSurfaceContainerHigh"
        android:text="Randomly Choose Winners"
        app:icon="@drawable/ic_person_foreground"
        app:elevation="2dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/org_dialog_view_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/lightSurfaceContainerHigh"
        android:text="View QR"
        app:icon="@drawable/qr_icon_foreground"
...
